local variables for weablog are parsed from openweatherapi

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Contents</a></li>
         <li><a class="black-text" href="/webapp/iquote">iQuote</a></li>
-        <li><a class="black-text" href="#!">Link 2</a></li>
+        <li><a class="black-text" href="/webapp/weatherblog/test">WeaBlog</a></li>
         <li><a class="black-text" href="#!">Link 3</a></li>
         <li><a class="black-text" href="#!">Link 4</a></li>
       </ul>
@@ -71,7 +71,7 @@
             <div class="center">
               <ul>
                 <li><a class="brown-text" href="/webapp/iquote">iQuote</a></li>
-                <li><a class="brown-text" href="#!">Link 2</a></li>
+                <li><a class="brown-text" href="/webapp/weatherblog/test">WeaBlog</a></li>
                 <li><a class="brown-text" href="#!">Link 3</a></li>
                 <li><a class="brown-text" href="#!">Link 4</a></li>
               </ul>
