--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <img class="section no-pad-bot" src="./index_resource/site_icon.png" alt="LaJollaPines" vertical-align="center"
-        width="60" height="50">
+        width="50" height="50">
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Contents</a></li>
       </ul>
@@ -27,7 +27,7 @@
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Contents</a></li>
         <li><a class="black-text" href="/webapp/iquote">iQuote</a></li>
-        <li><a class="black-text" href="/webapp/weatherblog/test">WeaBlog</a></li>
+        <li><a class="black-text" href="/webapp/weatherblog/test">Weather Blog</a></li>
         <li><a class="black-text" href="#!">Link 3</a></li>
         <li><a class="black-text" href="#!">Link 4</a></li>
       </ul>
@@ -71,7 +71,7 @@
             <div class="center">
               <ul>
                 <li><a class="brown-text" href="/webapp/iquote">iQuote</a></li>
-                <li><a class="brown-text" href="/webapp/weatherblog/test">WeaBlog</a></li>
+                <li><a class="brown-text" href="/webapp/weatherblog/test">Weather Blog</a></li>
                 <li><a class="brown-text" href="#!">Link 3</a></li>
                 <li><a class="brown-text" href="#!">Link 4</a></li>
               </ul>
