Change save stage

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <p class="center">Resumé of members on this team:</p>
             <div class="center">
               <p class="light">Yuxuan Wu</p>
+              <a class="brown-text" href="https://yuxuan-wu.github.io/">personal site</a>
+              <br>
               <a class="brown-text" href="#!">resume</a>
               <p class="light">Cheng Hao</p>
               <a class="brown-text" href="#!">h9cheng@ucsd.edu</a>
@@ -137,8 +139,8 @@
                 <div class="center">
                   <ul>
                     <p class="light">Yuxuan Wu</p>
-                    <li><a class="brown-text" href="#!">yuw095@ucsd.edu</a></li>
-                    <li><a class="brown-text" href="#!">charleslele2002@gmail.com</a></li>
+                    <li><a class="brown-text" href="mailto:yuw095@ucsd.edu">yuw095@ucsd.edu</a></li>
+                    <li><a class="brown-text" href="mailto:charleslele2002@gmail.com">charleslele2002@gmail.com</a></li>
                     <p class="light">Cheng Hao</p>
                     <li><a class="brown-text" href="#!">h9cheng@ucsd.edu</a></li>
                   </ul>
